--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.1.1",
     "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-plugin-typography": "^2.3.0",
     "gatsby-source-filesystem": "^2.0.37",
     "gatsby-transformer-sharp": "^2.1.19",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.2.0"
+    "react-typography": "^0.16.19",
+    "styled-components": "^4.2.0",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "eslint-config-react-app": "^4.0.1",
